# wtop

./: .gitignore  CMakeLists.txt  LICENSE  MSYS2_BUILD.md  README.md  build-windows.bat  build.bat  build.ps1  build.sh  build_msys2.sh  go.sum  main.cpp  main.go  resize_other.go  resize_unix.go  setup_and_build.bat  test.go  test_thread.cpp  version.rc  wtop-htop  wtop-linux  wtop-macos
.github/workflows/: release.yml
include/metrics/: metrics_manager.hpp  system_metrics.hpp
include/telemetry/: telemetry_manager.hpp
include/ui/: display.hpp
include/utils/: config.hpp  logger.hpp
metrics/: collector.go  gpu.go  process.go
src/metrics/: metrics_manager.cpp  system_metrics.cpp
src/telemetry/: telemetry_manager.cpp
src/ui/: display.cpp
src/utils/: logger.cpp
types/: types.go
ui/: cpu.go  display.go  footer.go  gpu.go  header.go  memory.go  process.go  render.go  system.go  terminal.go
